manifests/ingress/overlays/dev/ingressroute-patch.yaml
# A-запись dev.argo.iivdele.ru → IP dev-сервера
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app
  namespace: app
spec:
  routes:
    - match: Host(`dev.argo.iivdele.ru`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: backend
          port: 80
    - match: Host(`dev.argo.iivdele.ru`)
      kind: Rule
      services:
        - name: frontend
          port: 80
  tls:
    certResolver: letsencrypt
    domains:
      - main: dev.argo.iivdele.ru
